--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "merge-descriptors": "^1.0.1",
     "moment": "^2.15.1",
     "morgan": "~1.7.0",
+    "mysql": "^2.11.1",
     "nunjucks": "^2.4.2",
     "serve-favicon": "~2.3.0",
     "winston": "^2.2.0"
@@ -27,6 +28,9 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
     "supertest": "^2.0.0"
+  },
+  "bin": {
+    "express-extended": "./bin/cli.js"
   },
   "scripts": {
     "test": "./node_modules/.bin/_mocha --reporter spec --recursive",
