--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-session": "^1.14.0",
+    "fs-extra": "^0.30.0",
     "knex": "^0.11.9",
     "lodash": "^4.15.0",
     "merge-descriptors": "^1.0.1",
