--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-cli": "^6.14.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.14.0",
+    "chai": "^3.5.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
     "supertest": "^2.0.0"
