--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "merge-descriptors": "^1.0.1",
     "moment": "^2.15.1",
     "morgan": "~1.7.0",
-    "mysql": "^2.11.1",
     "nunjucks": "^2.4.2",
     "serve-favicon": "~2.3.0",
     "winston": "^2.2.0"
@@ -29,6 +28,8 @@
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
+    "mysql": "^2.11.1",
+    "sqlite3": "^3.1.7",
     "supertest": "^2.0.0"
   },
   "bin": {
