--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
-    "istanbul": "^0.4.5",
+    "istanbul": "1.0.0-alpha.2",
     "mocha": "^3.0.2",
     "mysql": "^2.11.1",
     "sqlite3": "^3.1.7",
@@ -42,8 +42,8 @@
     "lib/*"
   ],
   "scripts": {
-    "test": "./node_modules/.bin/_mocha --reporter spec --recursive",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec --recursive",
+    "test": "npm run babel && ./node_modules/.bin/_mocha --reporter spec --recursive --compilers js:babel-core/register",
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec --recursive --compilers js:babel-core/register",
     "babel": "rm -rf ./lib && ./node_modules/.bin/babel ./src -d ./lib --copy-files",
     "build": "npm run babel"
   },
